--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,10 +28,13 @@
         </button>
           <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
+              {% if user.is_authenticated %}
+              <a href="/" class="nav-item nav-link" id="home">Home</a>
+              <a href="/logout" class="nav-item nav-link" id="logout">Log Out</a>
+              {% else %}
               <a href="/login" class="nav-item nav-link" id="login">Log In</a>
               <a href="/sign-up" class="nav-item nav-link" id="signUp">Sign UP</a>
-              <a href="/logout" class="nav-item nav-link" id="logout">Log Out</a>
-              <a href="/" class="nav-item nav-link" id="home">Home</a>
+              {% endif %}
             </div>
           </div>
     </nav>
